--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:src="@drawable/ic_launcher_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,18 +26,6 @@
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
-    <EditText
-        android:id="@+id/et_pass"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="20dp"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="5dp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/et_phone" />
-
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
@@ -45,7 +33,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:text="Login"
-        app:layout_constraintTop_toBottomOf="@id/et_pass" />
+        app:layout_constraintTop_toBottomOf="@id/et_phone" />
 
     <View
         android:id="@+id/decorator_1"
@@ -94,7 +82,7 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="200dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,18 +93,10 @@
         app:lottie_rawRes="@raw/animation_nurse" />
 
     <TextView
-        android:id="@+id/tv_forgot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/btn_login"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
-
-    <TextView
         android:id="@+id/tv_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="Signup Here"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/btn_login"
