--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -6,11 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activities.VerificationActivity">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_launcher_icon"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:layout_constraintBottom_toTopOf="@id/tv_title"
+        app:lottie_rawRes="@raw/otp_animation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,12 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:fontFamily="@font/light"
-        android:text="Enter verification code sent to your registered email or phone no"
+        app:layout_constraintBottom_toTopOf="@id/otp_layout"
+        android:text="Enter verification code sent to your registered phone no"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
+        app:layout_constraintTop_toBottomOf="@id/animation" />
 
     <LinearLayout
         android:id="@+id/otp_layout"
@@ -36,6 +40,7 @@
         android:orientation="horizontal"
         android:padding="10dp"
         android:weightSum="6"
+        app:layout_constraintBottom_toTopOf="@id/btn_verify"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title">
@@ -125,5 +130,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/otp_layout" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_resend"
+        app:layout_constraintTop_toBottomOf="@id/btn_verify"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Resend Code"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
