--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -32,6 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="10dp"
+            android:inputType="textCapWords"
+            android:imeOptions="actionDone"
             android:background="@drawable/edit_text_bg"
             android:fontFamily="@font/regular"
             android:hint="Search Hospital"
