--- a/app/src/main/res/layout/list_item_cities.xml
+++ b/app/src/main/res/layout/list_item_cities.xml
@@ -5,9 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/tv_city"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="16sp"
         android:padding="10dp"
