--- a/app/src/main/res/layout/list_item_hospitals.xml
+++ b/app/src/main/res/layout/list_item_hospitals.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     android:elevation="5dp"
     app:cardCornerRadius="10dp"
-    android:layout_margin="10dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +23,7 @@
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:src="@drawable/hospital_image"
+            android:transitionName="animation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
