--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="light_green">#00D09C</color>
     <color name="white">#ffffff</color>
+    <color name="golden">#FFD700</color>
 </resources>
