--- a/app/src/main/res/layout/list_item_appointment.xml
+++ b/app/src/main/res/layout/list_item_appointment.xml
@@ -27,24 +27,26 @@
 
         <TextView
             android:id="@+id/tv_hospital_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/bold"
             android:text="ABC Hospital, Sangli"
             android:textColor="@android:color/black"
             android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
             app:layout_constraintStart_toStartOf="@id/iv_logo"
             app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
         <TextView
             android:id="@+id/tv_address"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:fontFamily="@font/regular"
             android:text="abc road near miraj"
             app:drawableStartCompat="@drawable/ic_location"
+            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_hospital_name" />
 
@@ -103,30 +105,33 @@
             app:layout_constraintStart_toEndOf="@id/tv_time_slot_label"
             app:layout_constraintTop_toTopOf="@id/tv_time_slot_label" />
 
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:elevation="0dp"
-            android:text="Cancel"
+            android:layout_margin="10dp"
+            android:background="@color/light_green"
+            android:fontFamily="@font/bold"
+            android:padding="10dp"
+            android:text="Cancelled"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/tv_address"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_hospital_name"
             app:layout_constraintTop_toTopOf="@id/tv_hospital_name" />
 
-        <TextView
-            android:id="@+id/tv_time"
+        <Button
+            android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:drawablePadding="5dp"
-            android:fontFamily="@font/regular"
-            android:text="12:00 pm"
-            android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_time"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="10dp"
+            android:elevation="0dp"
+            android:fontFamily="@font/bold"
+            android:text="Cancel"
+            app:layout_constraintBottom_toBottomOf="@id/tv_address"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
+            app:layout_constraintStart_toEndOf="@id/tv_hospital_name"
+            app:layout_constraintTop_toTopOf="@id/tv_hospital_name" />
 
         <TextView
             android:id="@+id/tv_schedule_date"
@@ -135,12 +140,25 @@
             android:layout_margin="5dp"
             android:drawablePadding="5dp"
             android:fontFamily="@font/regular"
-            android:text="25/07/2021"
+            android:text="25/07/2021 11:00 am"
             android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_date"
+            app:drawableStartCompat="@drawable/ic_time"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
 
+        <RatingBar
+            android:id="@+id/rating_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/golden"
+            android:scaleX=".6"
+            android:scaleY=".6"
+            android:clickable="true"
+            android:translationX="-40dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_address" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
