--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -155,6 +155,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_email_label" />
 
     <EditText
+        android:id="@+id/et_phone"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:background="@drawable/edit_text_bg"
