Updated Profile functions

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -132,6 +132,7 @@
         android:layout_height="40dp"
         android:background="@drawable/edit_text_bg"
         android:fontFamily="@font/regular"
+        android:inputType="textPersonName"
         android:padding="10dp"
         android:text="Shubham Aajmane"
         android:textSize="16sp"
@@ -146,6 +147,7 @@
         android:layout_height="40dp"
         android:background="@drawable/edit_text_bg"
         android:fontFamily="@font/regular"
+        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:text="aajmane09@gmail.com"
         android:textSize="16sp"
@@ -160,6 +162,8 @@
         android:layout_height="40dp"
         android:background="@drawable/edit_text_bg"
         android:fontFamily="@font/regular"
+        android:inputType="phone"
+        android:maxLength="10"
         android:padding="10dp"
         android:text="9552400654"
         android:textSize="16sp"
